# olinleap

./: .gitignore  Cargo.old.toml  Cargo.toml  README.md  build.rs
coorrespondence_approach/: main.py
coorrespondence_approach/api/: correspondences.py  data_load.py  error.py  find_roi.py  ml_model.py  model_3d.py  pnp.py
data/: first_run.txt  messages.txt  parse_data.py  server.py
data/classes/: pointCloudPack.cpp  pointCloudPack.h
data/client/: CMakeLists.txt  main.cpp
data/server/: CMakeLists.txt  main.cpp  server
handtracking/: NewScene.draft  handtracking.mabu  handtracking.mlproject  handtracking.package  manifest.xml  scenes.comp  test.py
handtracking/code/: srcs.comp
handtracking/code/inc/: handtracking.h
handtracking/code/src/: handtracking.cpp  main.cpp
handtracking/pipeline/lap/: project.json
handtracking/pipeline/lap/project/: 84c1f987-0d69-4e64-995d-3f25c826103e.json  b2008991-8d6d-4a40-8391-bbb971203409.json
handtracking/scenes/: NewScene.design  NewScene.scene.res.xml  NewScene.scene.xml
hello-neon/: README.md  package.json
hello-neon/.cargo/: config
hello-neon/native/: Cargo.toml  build.rs
hello-noders/native/src/: lib.rs
magicleap-rs/: Cargo.toml  README.md  build.rs
magicleap-rs/c_api/: magicleapwrapper.h
magicleap-rs/examples/: test.rs
magicleap-rs/src/: lib.rs
meshclient-rs/: Cargo.toml  README.md
olinleap-projects/: Cargo.toml
pcl/: CMakeLists.txt  uniform_sampling.h
prefab-tictactoe/: package-lock.json
spatiallab/: manifest.xml
spatiallabFA19/: package-lock.json
spatiallabFA19/src/: app.js  main.js
(+1 files in other folders)
