[package]
name = "magicleap_rs"
version = "0.1.0"
authors = ["Jonathan Kelley <jkelleyrtp@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
build = "build.rs"

[dependencies]
clap = "2.33.0"

[build-dependencies]
bindgen = "0.51"
