[package]
name = "hello-neon"
version = "0.1.0"
authors = ["Jonathan Kelley, Duncan Mazza, Tim Novak, Audrey Lee <jkelleyrtp@gmail.com>"]
license = "MIT"
build = "build.rs"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "hello_neon"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.3.1"

[dependencies]
neon = "0.3.1"

[dependencies.webxr]
git="https://github.com/servo/webxr.git"
features=['magicleap']
